@@ -376,7 +376,7 @@ def destroy_virtual_interface(logger, iface_name):
 
 
 def create_virtual_interface(logger, iface_name):
-    """ create an interface
+    """ Create an interface
 
     :param logger: A logger handler
     :param interface: a string representing the exact name of the interface (as seen by the system)
@@ -391,6 +391,16 @@ def create_virtual_interface(logger, iface_name):
         ret = False
 
     return ret
+
+
+def recreate_virtual_interface(logger, iface_name):
+    """ Recreate an interface
+
+    :param logger: A logger handler
+    :param interface: a string representing the exact name of the interface (as seen by the system)
+    :return: True / False
+    """
+    return destroy_virtual_interface(logger, iface_name) and create_virtual_interface(logger, iface_name)
 
 
 def write_management_ips(logger):
